--- a/data-wrangle/topo/Topo Data Extraction - ArcGIS.Rmd
+++ b/data-wrangle/topo/Topo Data Extraction - ArcGIS.Rmd
@@ -11,6 +11,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 The purpose of this Markdown Document is to record the methods for extracting topo data for the 1500 redcedar GPS points using ArcGIS.
 
+**Note the below data can only be extracted for trees within the US. :( **
+
 ## ArcGIS Toolbox
 
 Topo data were extracted for each point using the Geomorphometry and Gradient Metrics Toolbox available [here](https://www.arcgis.com/home/item.html?id=63ffcecf3b2a45bf99a84cdaedefaccf). 
@@ -24,18 +26,17 @@ A manuscript about the package is available [here](https://www.sciencedirect.com
 
 ## Explanitory variables
 
-This package extracts neat data for gps points that can be useful as explanitory variables for the response of tree health. For example, this dataset includes calculations for heat load index and transformations for aspect. 
+This package calculates neat data for DEM rasters that can be useful as explanitory variables for the response of tree health. For example, this dataset includes calculations for heat load index and transformations for aspect. 
 
 * Variables
   + CTI - similar to TWI
   + Slope Position
   + Heat Load Index - slope, aspect and latitude
-  + second derivited slope - concave vs convexity? 
-  + Transformed Aspect - may be included in heat load index
+  + 2nd derivitive slope - concave vs convexity? 
+  + Transformed Aspect 
   
 
 > Note you will need to extract data to points for each of the calculated rasters above. We will also want some data directly extracted from DEMs
-
 
 
 ## Data
@@ -82,7 +83,7 @@ We kept getting errors while trying to create HLI rasters, so we decided to try 
     + follow instructions for batch download using uGet
     + Note each tile is about 500MBs
 
-DEMs downloaded for oregon and Washington
+DEMs downloaded for oregon and Washington (see r markdone script for list of urls to tifs)
 
 ```{r include=FALSE, eval=FALSE}
 https://prd-tnm.s3.amazonaws.com/StagedProducts/Elevation/13/TIFF/historical/n45w116/USGS_13_n45w116_20220309.tif
@@ -174,14 +175,21 @@ https://prd-tnm.s3.amazonaws.com/StagedProducts/Elevation/13/TIFF/historical/n50
     + Add tiles (.tif) downloaded from National Map
       + use 'Add Data' button and browse to DEM .tifs
       + note this took a while to add the data when you add them all at once. 
-  + Calculate HLI for each tile
+  + Calculate HLI (Heat Load Index) for each tile
     + Geoprocessing -> Heat Load Index (search for tool)
       + Select DEM (see list below)  - one at a time.
       + Add 'HLI_' to front of output_raster name. No need to add file type designation, just leave blank (e.g. HLI_USGS_13_n48w124_20200109)
-  + Calculate CTI
-  + 
+  + Repeat for the following measurements (Descriptions Below)
+    + CTI
+    + TRASP
+    + SDS
+    + IMI
+  
+  
+> Note I had to add () after the 'print' command in scripts for CTI and IMI (docs/arc/toolbox/geomor/...)
+
     
-  * DEM tiles used, overlaying points (some ID, MT, and CA points not calculated at this time)
+  * DEM tiles used, overlaying points (tiles for some ID, MT, and CA points not calculated at this time)
     + USGS_13_n49w125_20200110
     + USGS_13_n49w124_20200109
     + USGS_13_n49w123_20200107
@@ -213,7 +221,19 @@ https://prd-tnm.s3.amazonaws.com/StagedProducts/Elevation/13/TIFF/historical/n50
     + USGS_13_n44w123_20130911
     
   
-    
+
+
+* Variables included are described by -[Evans et al. 2014](https://github.com/jeffreyevans/GradientMetrics) as follows.
+    + Temperature & Moisture
+      + HLI - Heat Load Index - "A southwest facing slope should have warmer temperatures than a southeast facing slope, even though the amount of solar radiation they recieve is equivalent. The McCune and Keon (2002) method accounts for this by "folding" the aspect so that the highest values are southwest and the lowest values are northeast. Additionally, this method account for steepness of slope, which is not addressed in most other aspect rescaling equations." 
+        + McCune and Keon (2002). McCune, Bruce and Dylan Keon, 2002. Equations for potential annual direct incident radiation and heat load index. Journal of Vegetation Science. 13:603-606.
+      + CTI - Compound Topographic Index - "steady state wetness index. The CTI is a function of both the slope and the upstream contributing area per unit width orthigonal to the flow direction" -[Evans et al. 2014](https://github.com/jeffreyevans/GradientMetrics)
+      + TRASP - Slope/Aspect Transformation - Topographic radiation aspect index (Robert & Cooper 1989) - "Circular aspect is transformed to assign a value of zero to land oriented in a north-northeast direction, (typically the coolest and wettest orientation), and a value of one on the hnotter, dryer south-southwesterly slopes. The result is a continuous variable between 0-1).
+        + Roberts. D. W., and Cooper, S. V., 1989. Concepts and techniques of vegetation mapping. In Land Classifications Based on Vegetation: Applications for Resource Management. USDA Forest Service GTR INT-257, Ogden, UT, pp 90-96
+      + SDS - 2nd Derivative Slope - " Calculates 2nd derivative of slope" 
+        + the rate of the rate of change in slope? concave or convex? 
+      + IMI - Integrated Moisture Index - "Calculates an integrated moisture index (Iverson et al. 1997)" 
+        + [Iverson, Louis R., et al. "A GIS-derived integrated moisture index to predict forest composition and productivity of Ohio forests (USA)." Landscape Ecology 12.5 (1997): 331-348.](https://www.srs.fs.usda.gov/pubs/11583)    
     
   
   
